DBDT31855 拼接sql时默认增加BR_DA_JIBENXX的关联，调整相关业务逻辑